<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivChangeUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_tip"
        android:textColor="@color/color333333"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTip">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:src="@mipmap/login_icon_phone" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_account_tip"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="5dp"
            android:textColor="@color/text_main_color"
            android:textColorHint="@color/text_assistant_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivClearAccount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:paddingRight="5dp"
            android:src="@mipmap/login_icon_close_n"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPhone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_icon_lock" />

        <EditText
            android:id="@+id/editPwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_login_pwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="5dp"
            android:textColor="@color/text_main_color"
            android:textColorHint="@color/text_assistant_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivLook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:paddingLeft="5dp"
            android:src="@mipmap/task_icon_eye_p"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivClearPass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:paddingRight="5dp"
            android:src="@mipmap/login_icon_close_n"
            android:visibility="gone" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/main_view_line_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPhone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/main_view_line_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/main_view_line_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPhone" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/OrangeButtonStyle"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="28dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_str"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
