<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorF8F8F8"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/my_02_bg"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/my_head_portrait" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            tools:text="132****9848" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_me_selector"
        android:orientation="vertical"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_icon_weixin" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/me_margin_text_left"
                android:layout_weight="1"
                android:text="@string/binding_wechat"
                android:textColor="@color/color222222" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/common_icon_back1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/me_margin_line_left"
            android:layout_marginRight="@dimen/me_margin_line_right"
            android:background="@color/colorF8F8F8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_icon_problem" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/me_margin_text_left"
                android:layout_weight="1"
                android:text="@string/common_problem"
                android:textColor="@color/color222222" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/common_icon_back1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/me_margin_line_left"
            android:layout_marginRight="@dimen/me_margin_line_right"
            android:background="@color/colorF8F8F8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_icon_business" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/me_margin_text_left"
                android:layout_weight="1"
                android:text="@string/business_cooperation"
                android:textColor="@color/color222222" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/common_icon_back1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/me_margin_line_left"
            android:layout_marginRight="@dimen/me_margin_line_right"
            android:background="@color/colorF8F8F8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_icon_version" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/me_margin_text_left"
                android:layout_weight="1"
                android:text="@string/current_version"
                android:textColor="@color/color222222" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/common_icon_back1" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.coorchice.library.SuperTextView
        android:id="@+id/stSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/super_common_height"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="30dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="确认提交"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        app:stv_corner="30dp"
        app:stv_shaderEnable="true"
        app:stv_shaderEndColor="@color/colorE2E2E2"
        app:stv_shaderMode="leftToRight"
        app:stv_shaderStartColor="@color/colorE2E2E2" />

</LinearLayout>
